convert to cucumber

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -16,7 +16,7 @@
     ],
     "baseUrl": ".",
     "paths": {
-      "@nrwl-protractor/*": [
+      "@nrwl-cucumber/*": [
         "libs/*"
       ]
     }
