--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "nrwl-protractor",
+  "name": "nrwl-cucumber",
   "version": "0.0.0",
   "license": "MIT",
   "scripts": {
@@ -36,10 +36,14 @@
     "@angular/compiler-cli": "5.0.0",
     "@nrwl/schematics": "0.2.2",
     "@angular/language-service": "5.0.0",
+    "@types/cucumber": "^2.0.4",
     "@types/jasmine": "~2.5.53",
     "@types/jasminewd2": "~2.0.2",
     "@types/node": "~6.0.60",
+    "chai": "^4.1.2",
+    "chai-as-promised": "7.1.1",
     "codelyzer": "~3.1.1",
+    "cucumber": "^3.1.0",
     "jasmine-core": "~2.6.2",
     "jasmine-spec-reporter": "~4.1.0",
     "karma": "~1.7.0",
@@ -49,9 +53,11 @@
     "karma-jasmine": "~1.1.0",
     "karma-jasmine-html-reporter": "^0.2.2",
     "protractor": "~5.1.2",
+    "protractor-cucumber-framework": "^4.1.1",
     "ts-node": "~3.2.0",
     "tslint": "~5.3.2",
     "typescript": "2.5.3",
-    "prettier": "1.7.4"
+    "prettier": "1.7.4",
+    "yargs": "10.0.3"
   }
 }
