--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -5,7 +5,7 @@
     "module": "es2015",
     "baseUrl": ".",
     "paths": {
-      "@nrwl-protractor/*": [
+      "@nrwl-cucumber/*": [
         "libs/*"
       ]
     }
