--- a/tsconfig.e2e.json
+++ b/tsconfig.e2e.json
@@ -4,21 +4,7 @@
     "outDir": "./out-tsc/e2e",
     "module": "commonjs",
     "target": "es5",
-    "types": [
-      "jasmine",
-      "jasminewd2",
-      "node"
-    ],
-    "baseUrl": ".",
-    "paths": {
-      "@nrwl-protractor/*": [
-        "libs/*"
-      ]
-    }
+    "types": ["cucumber", "node", "selenium-webdriver"]
   },
-  "exclude": [
-    "**/*.spec.ts",
-    "node_modules",
-    "tmp"
-  ]
+  "exclude": ["**/*.spec.ts", "node_modules", "tmp"]
 }
