--- a/tsconfig.spec.json
+++ b/tsconfig.spec.json
@@ -10,7 +10,7 @@
     ],
     "baseUrl": ".",
     "paths": {
-      "@nrwl-protractor/*": [
+      "@nrwl-cucumber/*": [
         "libs/*"
       ]
     }
